chinese documents, lang linking

--- a/cn/download.html
+++ b/cn/download.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8"> 
     <title>clumsy, 在 Windows Vista / Windows 7 下模拟劣化网络环境(网络延迟，掉包，重发)的小工具。</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
     <link rel="stylesheet" href="layout.css">
@@ -18,6 +19,9 @@
             <li class="pure-menu-selected"><a href="download.html">下载</a></li>
             <li><a href="manual.html">文档</a></li>
         </ul>
+        <span class="lang-span">
+        <a href="../index.html">English Version</a>
+        </span>
         </div>
     </div>
     <div class="centered">
