--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8"> 
     <title>clumsy, an utility for simulating broken network for Windows Vista / Windows 7 and above</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
     <link rel="stylesheet" href="layout.css">
@@ -18,6 +19,9 @@
             <li><a href="download.html">Download</a></li>
             <li><a href="manual.html">Manual</a></li>
         </ul>
+        <span class="lang-span">
+        <a href="cn/index.html">中文版</a>
+        </span>
         </div>
     </div>
     <div class="centered">
