add doc about 'throttle' in similar software

--- a/cn/download.html
+++ b/cn/download.html
@@ -83,6 +83,7 @@ mingw32-make -C build CC=gcc config=release64
             <li><a href="http://wipfw.sourceforge.net/">wipfw</a> (Windows) - ipfw Windows 移植，但功能只有 ipfw 的一个子集。</li>
             <li><a href="http://www.linuxfoundation.org/collaborate/workgroups/networking/netem">netem</a> (Linux) - Linux Kernel 提供的网络模拟。</li>
             <li><a href="https://wiki.archlinux.org/index.php/Advanced_Traffic_Control">tc</a> (Linux) - 配置 Linux Kernel 的网络流量控制。</li>
+            <li><a href="https://github.com/dmolsen/Throttle">Throttle</a> (Mac) - 通过分享无限网络来模拟 3G 网络。</li>
         </ul>
         </p>
 
