--- a/download.html
+++ b/download.html
@@ -81,6 +81,8 @@ mingw32-make -C build CC=gcc config=release64
             <li><a href="http://wipfw.sourceforge.net/">wipfw</a> (Windows) - ipfw Windows port with only a subset of functions.</li>
             <li><a href="http://www.linuxfoundation.org/collaborate/workgroups/networking/netem">netem</a> (Linux) - Linux kernel supported network emulation. </li>
             <li><a href="https://wiki.archlinux.org/index.php/Advanced_Traffic_Control">tc</a> (Linux) - Configure traffic control in the Linux kernel.</li>
+            <li><a href="https://github.com/dmolsen/Throttle">Throttle</a> (Mac) - Simulate 3G network through shared wireless network.</li>
+
         </ul>
         </p>
 
