--- a/cn/manual.html
+++ b/cn/manual.html
@@ -114,13 +114,27 @@
         <p>
             <strong>无法开始，错误代码 "3"</strong><br>
             在命令行中输入一下两行并执行：
+            <pre>
+            sc stop WinDivert1.0
+            sc delete WinDivert1.0 
+            </pre>
+            <p>
+                在下一版本中这个问题应该会被修正。
+            </p>
         </p>
-<pre>
-sc stop WinDivert1.0
-sc delete WinDivert1.0 
-</pre>
         <p>
-            在下一版本中这个问题应该会被修正。
+            <strong>clumsy 开始运行后使得网络变慢。</strong><br>
+            当你输入了 filter 点击 '开始' 后，clumsy 就已经开始截获包裹。这个一定会有一定的效率损失。但好消息是 clumsy 本身就是为了模拟网络状况糟糕的软件所以这个问题不是很严重。
+
+            另一方面，你应该精确的设置 filter 的内容，让它尽可能准确的捕捉你感兴趣的数据包。
+        </p>
+        <p>
+            <strong>延迟比在 Lag 里设置的要严重很多。</strong><br>
+            这个问题的重点在于，clumsy 里面的设置<i>并不是</i>准确的可以用来做测速的值。其作用更倾向于作为参数控制软件的行为。
+
+            另一个需要理解的是，这里的延迟是作用于每一个网络包裹的。比如建立一个 TCP 连接需要至少 3 个包裹。那么如果 clumsy 引入了 20ms 的延迟，对于每一个 TCP 连接则至少引入了 3*20=60ms 的延迟。如果是要载入一个网页的话，有部分 HTTP 请求必须是要按顺序完成后页面才能开始渲染。假如要完成 1, 2, 3 这三个请求，那么 clumsy 在这里至少引入了 3*60=180ms 的延迟。
+
+            所以说如果 clumsy 让网络变的很慢的话也不用太担心。
         </p>
 
         <hr>
