--- a/manual.html
+++ b/manual.html
@@ -124,7 +124,7 @@
         </p>
         <p>
             <strong>clumsy introduces overhead to the network.</strong><br>
-            When you enter you filter and hit 'Start', clumsy has already started captureing packets. This would definetely add overhead into the network. Fortunately this is sort of consistent with the usage of this software. There is room for optimization, but it might need more work.
+            When you enter you filter and hit 'Start', clumsy has already started capturing packets. This would definetely add overhead into the network. Fortunately this is sort of consistent with the usage of this software. There is room for optimization, but it might need more work.
 
             It would be better to make your filters accurately capture the packets you're interested in.
         </p>
