--- a/download.html
+++ b/download.html
@@ -82,6 +82,7 @@ mingw32-make -C build CC=gcc config=release64
             <li><a href="http://www.linuxfoundation.org/collaborate/workgroups/networking/netem">netem</a> (Linux) - Linux kernel supported network emulation. </li>
             <li><a href="https://wiki.archlinux.org/index.php/Advanced_Traffic_Control">tc</a> (Linux) - Configure traffic control in the Linux kernel.</li>
             <li><a href="https://github.com/dmolsen/Throttle">Throttle</a> (Mac) - Simulate 3G network through shared wireless network.</li>
+            <li><a href="http://nshipster.com/network-link-conditioner/">Network Link Conditioner</a> (Mac) - XCode bundled network conditioner.</li>
 
         </ul>
         </p>
