update desc to 0.2

--- a/cn/download.html
+++ b/cn/download.html
@@ -30,6 +30,7 @@
         </div>
         <h4>发布版本</h4>
         <p><strong>注意: clumsy 仅支持 Windows Vista, Windows 7 及以上版本。如果你安装的是 64 位的系统，请一定下载对应的 64 位版本，否则 clumsy 无法正常工作。</strong></p>
+        <p>0.2 - 更新到 WinDivert 1.1.7.</p>
         <ul class="textlist">
             <li>32位版本: <a href="https://github.com/jagt/clumsy/releases/download/0.2/clumsy-0.2-win32.zip">clumsy-0.2-win32.zip</a> (MD5:9aab0d257661a4f75831a7186254725b)</li>
             <li>64位版本: <a href="https://github.com/jagt/clumsy/releases/download/0.2/clumsy-0.2-win64.zip">clumsy-0.2-win64.zip</a> (MD5:c5117edad320930d14d18c1cac2a4ccd)</li>
