--- a/download.html
+++ b/download.html
@@ -30,6 +30,8 @@
         </div>
         <h4>Releases</h4>
         <p><strong>Notice: clumsy only support Windows Vista, Windows 7 and above. 64bit Windows users are strongly recommanded to download the 64bit build.</strong></p>
+        <p>0.2 - Updated WinDivert to 1.1.7.</p>
+
         <ul class="textlist">
             <li>32bit: <a href="https://github.com/jagt/clumsy/releases/download/0.2/clumsy-0.2-win32.zip">clumsy-0.2-win32.zip</a> (MD5:9aab0d257661a4f75831a7186254725b)</li>
             <li>64bit: <a href="https://github.com/jagt/clumsy/releases/download/0.2/clumsy-0.2-win64.zip">clumsy-0.2-win64.zip</a> (MD5:c5117edad320930d14d18c1cac2a4ccd)</li>
