update faq for win2008server compat issue

--- a/cn/manual.html
+++ b/cn/manual.html
@@ -136,6 +136,10 @@
 
             所以说如果 clumsy 让网络变的很慢的话也不用太担心。
         </p>
+        <p>
+            <strong>在 Windows Server 2008 上报错。</strong><br>
+            安装<a href="http://support.microsoft.com/kb/2761494">这个系统补丁</a>可以解决这个问题。 参见这个 <a href="https://github.com/jagt/clumsy/issues/14#issuecomment-72691983">issue</a>。
+        </p>
 
         <hr>
         <div class="footer"><span><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#97;&#103;&#116;&#116;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#106;&#97;&#103;&#116;&#116;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></span></div>
