--- a/manual.html
+++ b/manual.html
@@ -136,6 +136,10 @@
 
             So don't worry too much when clumsy makes things slow too much :)
         </p>
+        <p>
+            <strong>Failed to start on Windows Server 2008.</strong><br>
+            This can be fixed by <a href="http://support.microsoft.com/kb/2761494">installing an patch from Microsoft</a>. See <a href="https://github.com/jagt/clumsy/issues/14#issuecomment-72691983">this</a>.
+        </p>
 
         <hr>
         <div class="footer"><span><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#97;&#103;&#116;&#116;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#106;&#97;&#103;&#116;&#116;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></span></div>
