--- a/cn/index.html
+++ b/cn/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"> 
     <title>clumsy, 在 Windows Vista / Windows 7 下模拟劣化网络环境(网络延迟，掉包，重发)的小工具。</title>
-    <link rel="stylesheet" href="https://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+    <link rel="stylesheet" href="https://yui-s.yahooapis.com/pure/0.3.0/pure-min.css">
     <link rel="stylesheet" href="layout.css">
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="ie8.css">
