--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"> 
     <title>clumsy, an utility for simulating broken network for Windows Vista / Windows 7 and above</title>
-    <link rel="stylesheet" href="https://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+    <link rel="stylesheet" href="https://yui-s.yahooapis.com/pure/0.3.0/pure-min.css">
     <link rel="stylesheet" href="layout.css">
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="ie8.css">
