--- a/cn/manual.html
+++ b/cn/manual.html
@@ -113,7 +113,7 @@
         <h4>常见问题</h4>
         <p>
             <strong>无法开始，错误代码 "3"</strong><br>
-            在命令行中输入一下两行并执行：
+            在命令行中输入以下两行并执行：
             <pre>
             sc stop WinDivert1.0
             sc delete WinDivert1.0 
