--- a/download.html
+++ b/download.html
@@ -29,7 +29,7 @@
         <h1>Download</h1>
         </div>
         <h4>Releases</h4>
-        <p><strong>Notice: clumsy only support Windows Vista, Windows 7 and above. 64bit Windows users are strongly recommanded to download the 64bit build.</strong></p>
+        <p><strong>Notice: clumsy only support Windows Vista, Windows 7 and above. 64bit Windows users are strongly recommended to download the 64bit build.</strong></p>
         <p>0.2 - Updated WinDivert to 1.1.7.</p>
         <ul class="textlist">
             <li>32bit: <a href="https://github.com/jagt/clumsy/releases/download/0.2/clumsy-0.2-win32.zip">clumsy-0.2-win32.zip</a> (MD5:9aab0d257661a4f75831a7186254725b)</li>
