--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li>Support not only HTTP, any protocol based on TCP/IP is supported.</li>
             <li>Works even if you're offline (ie, connecting from localhost to localhost).</li>
             <li>Your application keeps running, while clumsy can start and stop anytime.</li>
-            <li>Interactive controll how bad the network can be, with enough visual feedback to tell you what's going on.</li>
+            <li>Interactive control how bad the network can be, with enough visual feedback to tell you what's going on.</li>
         </ul>
 
         <h4>In Action</h4>
