update 0.3 build instructions; add whoisusing

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li class="pure-menu-selected"><a href="index.html">About</a></li>
             <li><a href="download.html">Download</a></li>
             <li><a href="manual.html">Manual</a></li>
+            <li><a href="whoisusingclumsy.html">Who is using clumsy?</a></li>
         </ul>
         <span class="lang-span">
         <a href="cn/index.html">中文版</a>
