--- a/manual.html
+++ b/manual.html
@@ -18,6 +18,7 @@
             <li><a href="index.html">About</a></li>
             <li><a href="download.html">Download</a></li>
             <li class="pure-menu-selected"><a href="manual.html">Manual</a></li>
+            <li><a href="whoisusingclumsy.html">Who is using clumsy?</a></li>
         </ul>
         <span class="lang-span">
         <a href="cn/index.html">中文版</a>
@@ -89,6 +90,7 @@
         </p>
         <div>
             <table border="1" cellpadding="1" class="textlist" style="width:460px; margin:0 auto;">
+            <tr><td><tt>loopback</tt></td><td>Is loopback packet?</td></tr>
             <tr><td><tt>outbound</tt></td><td>Is outbound?</td></tr>
             <tr><td><tt>inbound</tt></td><td>Is inbound?</td></tr>
             <tr><td><tt>ifIdx</tt></td><td>Interface index</td></tr>
