link to source page

--- a/whoisusingclumsy.html
+++ b/whoisusingclumsy.html
@@ -34,7 +34,7 @@
         </p>
 
         <p>
-        If you shipped your game with help from clumsy and you're authorized to share this info, consider send me a mail at <span><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#97;&#103;&#116;&#116;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#106;&#97;&#103;&#116;&#116;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></span> and I'll add it to this page. Alternatively you can directly submit for a PR on this page.
+        If you shipped your game with help from clumsy and you're authorized to share this info, consider send me a mail at <span><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#97;&#103;&#116;&#116;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#106;&#97;&#103;&#116;&#116;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></span> and I'll add it to this page. Alternatively you can directly submit for a PR <a href="https://github.com/jagt/clumsy/blob/gh-pages/whoisusingclumsy.html">on this page</a>.
         </p>
 
         <ul>
