add <Citywars Savage> to whos using.

--- a/whoisusingclumsy.html
+++ b/whoisusingclumsy.html
@@ -38,7 +38,7 @@
         </p>
 
         <ul>
-            <li>[PLACEHOLDER]</li>
+            <li><a href="https://store.steampowered.com/app/910800/Citywars_Savage/">Citywars Savage</a></li>
         </ul>
 
         </div>
