Add Polus.gg to whoisusing page.
Thank you for this amazing tool!

--- a/whoisusingclumsy.html
+++ b/whoisusingclumsy.html
@@ -39,6 +39,7 @@
 
         <ul>
             <li><a href="https://store.steampowered.com/app/910800/Citywars_Savage/">Citywars Savage</a></li>
+            <li><a href="https://store.steampowered.com/app/1653240/Polusgg/">Polus.gg</a></li>
         </ul>
 
         </div>
