--- a/whoisusingclumsy.html
+++ b/whoisusingclumsy.html
@@ -41,6 +41,7 @@
             <li><a href="https://store.steampowered.com/app/910800/Citywars_Savage/">Citywars Savage</a></li>
             <li><a href="https://store.steampowered.com/app/1653240/Polusgg/">Polus.gg</a></li>
             <li><a href="https://horugame.com/">HŌRU</a></li>
+            <li><a href="https://www.factorio.com/blog/post/fff-302">Factorio</a></li>
         </ul>
 
         </div>
